# YuE-for-Docker

./: .gitignore  1、install-uv-qinglong.ps1  2、run.ps1  2、run_gradio.ps1  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-uv.txt
inference/: gradio.py  infer.py
inference/xcodec_mini_infer/models/: soundstream_hubert_new.py
