[project]
name = "yue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py==2.1.0",
    "accelerate==1.3.0",
    "aiofiles==23.2.1",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.8.0",
    "argbind==0.3.9",
    "asttokens==3.0.0",
    "audioread==3.0.1",
    "bitsandbytes==0.45.1",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "decorator==5.1.1",
    "descript-audio-codec==1.0.0",
    "descript-audiotools==0.7.2",
    "docstring-parser==0.16",
    "einops==0.8.0",
    "exceptiongroup==1.2.2",
    "executing==2.2.0",
    "fastapi==0.115.7",
    "ffmpy==0.5.0",
    "filelock==3.17.0",
    "fire==0.7.0",
    "flash-attn",
    "flatten-dict==0.4.2",
    "fonttools==4.55.6",
    "fsspec==2024.12.0",
    "future==1.0.0",
    "gradio==5.13.2",
    "gradio-client==1.6.0",
    "grpcio==1.70.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "huggingface-hub==0.27.1",
    "idna==3.10",
    "importlib-resources==6.5.2",
    "ipython==8.31.0",
    "jedi==0.19.2",
    "jinja2==3.1.5",
    "joblib==1.4.2",
    "julius==0.2.7",
    "kiwisolver==1.4.8",
    "lazy-loader==0.4",
    "librosa==0.10.2.post1",
    "llvmlite==0.44.0",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markdown2==2.5.3",
    "markupsafe==2.1.5",
    "matplotlib==3.10.0",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mmgp==3.1.4.post15",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "networkx==3.4.2",
    "ninja==1.11.1.3",
    "numba==0.61.0",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "optimum-quanto==0.2.6",
    "orjson==3.10.15",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "peft==0.14.0",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "pooch==1.8.2",
    "prompt-toolkit==3.0.50",
    "protobuf==3.19.6",
    "psutil==6.1.1",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydub==0.25.1",
    "pygments==2.19.1",
    "pyloudnorm==0.1.1",
    "pyparsing==3.2.1",
    "pystoi==0.4.1",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.20",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "randomname==0.2.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==13.9.4",
    "ruff==0.9.3",
    "safehttpx==0.1.6",
    "safetensors==0.5.2",
    "scikit-learn==1.6.1",
    "scipy==1.10.1",
    "semantic-version==2.10.0",
    "sentencepiece==0.2.0",
    "setuptools==75.8.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soundfile==0.13.1",
    "soxr==0.5.0.post1",
    "stack-data==0.6.3",
    "starlette==0.45.3",
    "sympy==1.13.1",
    "tensorboard==2.18.0",
    "tensorboard-data-server==0.7.2",
    "termcolor==2.5.0",
    "threadpoolctl==3.5.0",
    "tokenizers==0.21.0",
    "tomlkit==0.13.2",
    "torch==2.5.1+cu124",
    "torch-stoi==0.2.3",
    "torchaudio==2.5.1+cu124",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.48.1",
    "typer==0.15.1",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "wcwidth==0.2.13",
    "websockets==14.2",
    "werkzeug==3.1.3",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"

[tool.uv.sources]
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.0.5/flash_attn-2.7.4.post1+cu124torch2.5-cp310-cp310-linux_x86_64.whl" }
